--- a/index.html
+++ b/index.html
@@ -2364,10 +2364,10 @@
                         <span class="hero-quote-text">"lowkey fascinating"</span>
                         <span class="hero-quote-author">— Lola</span>
                     </a>
-                    <a href="https://x.com/Tobby_scraper" target="_blank" rel="noopener" class="hero-quote">
-                        <img src="https://unavatar.io/twitter/Tobby_scraper" alt="" class="hero-quote-avatar">
-                        <span class="hero-quote-text">"Super hyped!"</span>
-                        <span class="hero-quote-author">— Tobby</span>
+                    <a href="https://x.com/lifeofchar1ie/status/2018350092588048641" target="_blank" rel="noopener" class="hero-quote">
+                        <img src="https://unavatar.io/twitter/lifeofchar1ie" alt="" class="hero-quote-avatar">
+                        <span class="hero-quote-text">"Clear, elegant, and personal—exactly what you want"</span>
+                        <span class="hero-quote-author">— Charlie</span>
                     </a>
                     <a href="https://x.com/HiEllenNg" target="_blank" rel="noopener" class="hero-quote">
                         <img src="https://unavatar.io/twitter/HiEllenNg" alt="" class="hero-quote-avatar">
@@ -2538,57 +2538,57 @@
                     </div>
                 </a>
 
-                <!-- Tweet 4 - Tobby -->
-                <a href="https://x.com/Tobby_scraper/status/2008471779233452059" target="_blank" rel="noopener" class="tweet-card">
+                <!-- Tweet 4 - Charlie -->
+                <a href="https://x.com/lifeofchar1ie/status/2018350092588048641" target="_blank" rel="noopener" class="tweet-card">
                     <div class="tweet-header">
-                        <img src="https://unavatar.io/twitter/Tobby_scraper" alt="" class="tweet-avatar">
+                        <img src="https://unavatar.io/twitter/lifeofchar1ie" alt="" class="tweet-avatar">
                         <div class="tweet-author-info">
                             <div class="tweet-name-row">
-                                <span class="tweet-name">Tobby</span>
+                                <span class="tweet-name">Charlie</span>
                             </div>
-                            <span class="tweet-handle">@Tobby_scraper</span>
+                            <span class="tweet-handle">@lifeofchar1ie</span>
                         </div>
                         <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
                     </div>
-                    <p class="tweet-content">Just joined the waitlist!! Super hyped with your product bro 😎</p>
+                    <p class="tweet-content">Calm and Headspace are very chaotic/busy and rather generic. Whitespace is clear, has elegant aesthetics, and is personal—exactly what you want from a meditation app without being overwhelmed. I certainly will be using it again!</p>
                     <div class="tweet-meta">
-                        <span>2:33 PM · Jan 2, 2026</span>
+                        <span>5:45 AM · Feb 2, 2026</span>
                     </div>
                 </a>
 
-                <!-- Tweet 5 - Suhas -->
-                <a href="https://x.com/zuess05/status/2008606842063384886" target="_blank" rel="noopener" class="tweet-card">
+                <!-- Tweet 5 - Ellen -->
+                <a href="https://x.com/HiEllenNg" target="_blank" rel="noopener" class="tweet-card">
                     <div class="tweet-header">
-                        <img src="https://unavatar.io/twitter/zuess05" alt="" class="tweet-avatar">
+                        <img src="https://unavatar.io/twitter/HiEllenNg" alt="" class="tweet-avatar">
                         <div class="tweet-author-info">
                             <div class="tweet-name-row">
-                                <span class="tweet-name">Suhas</span>
+                                <span class="tweet-name">Ellen</span>
                             </div>
-                            <span class="tweet-handle">@zuess05</span>
+                            <span class="tweet-handle">@HiEllenNg</span>
                         </div>
                         <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
                     </div>
-                    <p class="tweet-content">Wow man sounds so cool. Let me take a look</p>
+                    <p class="tweet-content">I actually dozed off in the middle of it 😂 That's how relaxing it was!</p>
                     <div class="tweet-meta">
-                        <span>11:27 PM · Jan 2, 2026</span>
+                        <span>Jan 2026</span>
                     </div>
                 </a>
 
-                <!-- Tweet 6 - GABRIEL -->
-                <a href="https://x.com/_GABRIEL_C_R_/status/2007987939985485995" target="_blank" rel="noopener" class="tweet-card">
+                <!-- Tweet 6 - Kelly -->
+                <a href="https://www.instagram.com/kellyhu_hui/" target="_blank" rel="noopener" class="tweet-card">
                     <div class="tweet-header">
-                        <img src="https://unavatar.io/twitter/_GABRIEL_C_R_" alt="" class="tweet-avatar">
+                        <img src="kelly-avatar.jpg" alt="" class="tweet-avatar">
                         <div class="tweet-author-info">
                             <div class="tweet-name-row">
-                                <span class="tweet-name">GABRIEL</span>
+                                <span class="tweet-name">Kelly</span>
                             </div>
-                            <span class="tweet-handle">@_GABRIEL_C_R_</span>
+                            <span class="tweet-handle">@kellyhu_hui</span>
                         </div>
-                        <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                        <svg class="tweet-x-logo" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.477 2 2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.879V14.89h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.989C18.343 21.129 22 16.99 22 12c0-5.523-4.477-10-10-10z"/></svg>
                     </div>
-                    <p class="tweet-content">Just did! ✨</p>
+                    <p class="tweet-content">Just had a session, really good!! Love it. The personalization makes such a difference.</p>
                     <div class="tweet-meta">
-                        <span>6:45 AM · Dec 31, 2025</span>
+                        <span>Jan 2026</span>
                     </div>
                 </a>
 
