--- a/index.html
+++ b/index.html
@@ -1851,6 +1851,39 @@
             font-style: italic;
         }
 
+        .hero-potd-row {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .hero-potd-row span {
+            font-family: 'Inter', sans-serif;
+            font-size: clamp(0.85rem, 2.2vw, 1rem);
+            color: rgba(255, 255, 255, 0.55);
+            font-weight: 500;
+            letter-spacing: 0.02em;
+        }
+
+        .hero-potd-row .potd-badge-inline {
+            width: 28px;
+            height: auto;
+            opacity: 0.8;
+            transition: opacity 0.3s ease;
+        }
+
+        .hero-potd-row:hover .potd-badge-inline {
+            opacity: 1;
+        }
+
+        @media (min-width: 480px) {
+            .hero-potd-row .potd-badge-inline {
+                width: 32px;
+            }
+        }
+
         /* Hero CTA Button - Phosphene Glow */
         .hero-cta-btn {
             display: inline-block;
@@ -2267,6 +2300,45 @@
             flex-shrink: 0;
         }
 
+        .tier-price {
+            font-family: 'Crimson Pro', serif;
+            font-size: 2rem;
+            font-weight: 400;
+            color: rgba(255, 255, 255, 0.95);
+            margin: 12px 0 2px;
+        }
+
+        .tier-price small {
+            font-family: 'Inter', sans-serif;
+            font-size: 0.85rem;
+            font-weight: 400;
+            color: rgba(255, 255, 255, 0.4);
+        }
+
+        .tier-price-note {
+            font-family: 'Inter', sans-serif;
+            font-size: 13px;
+            color: rgba(255, 255, 255, 0.4);
+            margin-bottom: 4px;
+        }
+
+        /* Bundles card variant */
+        .tier-card.bundles-card {
+            border-style: dashed;
+            border-color: rgba(255, 255, 255, 0.08);
+            background: rgba(255, 255, 255, 0.01);
+        }
+
+        .tier-card.bundles-card:hover {
+            border-color: rgba(255, 255, 255, 0.15);
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.04);
+        }
+
+        .tier-card.bundles-card .tier-price {
+            font-size: 1.5rem;
+            color: rgba(255, 255, 255, 0.7);
+        }
+
         .pricing-note {
             text-align: center;
             margin-top: 40px;
@@ -2379,7 +2451,10 @@
             </h1>
 
             <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
-            <p class="hero-use-cases-static fade-up visible fade-up-delay-7">For sleep, calm, focus — or nearly anything.</p>
+            <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row fade-up visible fade-up-delay-7" style="text-decoration: none;">
+                <img src="https://www.uneed.best/POTD1A.png" alt="Uneed #1 Product of the Day" class="potd-badge-inline">
+                <span>#1 Product of the Day</span>
+            </a>
 
             <div class="hero-quotes fade-up visible fade-up-delay-8">
                 <div class="hero-quotes-row">
@@ -2430,9 +2505,6 @@
                         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
                     </a>
                 </div>
-                <a href="https://www.uneed.best/tool/whitespace" target="_blank" class="award-badge">
-                    <img src="https://www.uneed.best/POTD1A.png" alt="Uneed Product of the Day #1" />
-                </a>
                 <a href="#testimonials" class="hero-more-reviews">
                     See more reviews
                     <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9l6 6 6-6"/></svg>
@@ -2833,6 +2905,11 @@
                 <div class="tier-card">
                     <h3 class="tier-name">Flow</h3>
                     <p class="tier-description">For regular practice</p>
+                    <div class="tier-price">
+                        <span class="monthly-credits">$7.99<small>/month</small></span>
+                        <span class="annual-credits" style="display: none;">$59.99<small>/year</small></span>
+                    </div>
+                    <div class="tier-price-note annual-credits" style="display: none;">~$4.99/mo</div>
                     <div class="tier-details">
                         <div class="tier-detail">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>
@@ -2858,6 +2935,11 @@
                     <span class="tier-badge">Most Popular</span>
                     <h3 class="tier-name">Elevate</h3>
                     <p class="tier-description">For deeper immersion</p>
+                    <div class="tier-price">
+                        <span class="monthly-credits">$14.99<small>/month</small></span>
+                        <span class="annual-credits" style="display: none;">$119.99<small>/year</small></span>
+                    </div>
+                    <div class="tier-price-note annual-credits" style="display: none;">~$9.99/mo</div>
                     <div class="tier-details">
                         <div class="tier-detail">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>
@@ -2879,26 +2961,22 @@
                     </div>
                 </div>
 
-                <div class="tier-card">
-                    <h3 class="tier-name">Immerse</h3>
-                    <p class="tier-description">For daily practice</p>
+                <div class="tier-card bundles-card">
+                    <h3 class="tier-name">Credit Bundles</h3>
+                    <p class="tier-description">Top up anytime, use at your pace</p>
+                    <div class="tier-price">From $5.99</div>
                     <div class="tier-details">
                         <div class="tier-detail">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>
-                            <span class="monthly-credits">Up to 80 sessions/mo</span>
-                            <span class="annual-credits" style="display: none;">Up to 60 sessions/mo</span>
+                            <span>3, 6, or 12 credits</span>
                         </div>
                         <div class="tier-detail">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>
-                            <span>All session lengths</span>
+                            <span>One-time purchase</span>
                         </div>
                         <div class="tier-detail">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>
-                            <span>Priority generation</span>
-                        </div>
-                        <div class="tier-detail annual-only" style="display: none;">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>
-                            <span>Credits roll over</span>
+                            <span>Credits never expire</span>
                         </div>
                     </div>
                 </div>
@@ -2925,9 +3003,6 @@
                         <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" alt="Get it on Google Play">
                     </a>
                 </div>
-                <a href="https://www.uneed.best/tool/whitespace" target="_blank" class="award-badge">
-                    <img src="https://www.uneed.best/POTD1A.png" alt="Uneed Product of the Day #1" />
-                </a>
                 <div class="countdown-wrapper" id="ctaCountdown" style="margin-top: 24px;">
                     <span class="countdown-label">Bonus ends in</span>
                     <span class="countdown-timer" id="cta-timer">6d 05:32:18</span>
