--- a/screenshot-generator.html
+++ b/screenshot-generator.html
@@ -5790,7 +5790,7 @@ for yourself to *focus*</textarea>
                     state.badgeImage = img;
                 }
             };
-            img.src = `https://www.uneed.best/${variant}.png`;
+            img.src = `src/assets/${variant}.png`;
         });
 
         // Badge overlay controls
