--- a/index.html
+++ b/index.html
@@ -1868,8 +1868,10 @@
         }
 
         .hero-potd-row .potd-badge-inline {
-            width: 28px;
-            height: auto;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            object-fit: cover;
             opacity: 0.8;
             transition: opacity 0.3s ease;
         }
@@ -1880,7 +1882,8 @@
 
         @media (min-width: 480px) {
             .hero-potd-row .potd-badge-inline {
-                width: 32px;
+                width: 28px;
+                height: 28px;
             }
         }
 
@@ -2452,7 +2455,7 @@
 
             <p class="scenario-tagline fade-up visible fade-up-delay-7">Whitespace crafts <em>fresh, personalized</em> spoken meditations for exactly where you are. <strong>On-demand.</strong></p>
             <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row fade-up visible fade-up-delay-7" style="text-decoration: none;">
-                <img src="https://www.uneed.best/POTD1A.png" alt="Uneed #1 Product of the Day" class="potd-badge-inline">
+                <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
                 <span>#1 Product of the Day</span>
             </a>
 
