--- a/index.html
+++ b/index.html
@@ -3038,10 +3038,17 @@
             <div class="cta-box">
                 <img src="https://c4c7ee2640e335085d93afe0c1a41ae6.cdn.bubble.io/f1766176221836x544526176091019140/whitespace.png" alt="Whitespace" style="width: 64px; height: auto; margin-bottom: 16px; opacity: 0.85;">
                 <h2 class="crimson">Start 10x'ing from the inside out</h2>
-                <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none; margin-bottom: 24px;">
-                    <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
-                    <span>#1 Product of the Day</span>
-                </a>
+                <div class="hero-badges-row" style="margin-bottom: 24px;">
+                    <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
+                        <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
+                        <span>#1 Product of the Day</span>
+                    </a>
+                    <span class="hero-badge-divider">·</span>
+                    <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
+                        <span style="color: #f5a623; font-style: normal; font-size: 12px; letter-spacing: 1px;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+                        <span>on the App Store</span>
+                    </a>
+                </div>
                 <p style="color: rgba(255, 255, 255, 0.5); margin-bottom: 32px; font-size: 1.125rem;">Limited Time Early Access Bonus: Download now and get 5 free sessions.</p>
                 
                 <div class="app-store-buttons" style="justify-content: center;">
