--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <meta property="og:url" content="https://trywhitespace.com/">
     <meta property="og:title" content="Whitespace | 10x Your Inner Self">
     <meta property="og:description" content="Your edge, on-demand. Personalized meditation that aligns mind, body, and intention - clearing the noise so you can build what matters. For founders and high-performers.">
-    <meta property="og:image" content="https://trywhitespace.com/src/assets/10x_your_inner_self.png">
+    <meta property="og:image" content="https://trywhitespace.com/src/assets/og-feature.png">
+    <meta property="og:image:width" content="1914">
+    <meta property="og:image:height" content="924">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:site_name" content="Whitespace">
 
     <!-- Twitter / X -->
@@ -23,7 +26,7 @@
     <meta name="twitter:url" content="https://trywhitespace.com/">
     <meta name="twitter:title" content="Whitespace | 10x Your Inner Self">
     <meta name="twitter:description" content="Your edge, on-demand. Personalized meditation that aligns mind, body, and intention - clearing the noise so you can build what matters. For founders and high-performers.">
-    <meta name="twitter:image" content="https://trywhitespace.com/src/assets/twitter-10x-your-inner-self.png">
+    <meta name="twitter:image" content="https://trywhitespace.com/src/assets/twitter-feature.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@100;200;300;400;500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
