--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/src/assets/favicon.png">
     
-    <title>Whitespace | 10x Your Inner Self</title>
+    <title>Whitespace | Meditation made for you. Every time.</title>
 
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://trywhitespace.com/">
-    <meta property="og:title" content="Whitespace | 10x Your Inner Self">
+    <meta property="og:title" content="Whitespace | Meditation made for you. Every time.">
     <meta property="og:description" content="Your edge, on-demand. Personalized meditation that aligns mind, body, and intention - clearing the noise so you can build what matters. For founders and high-performers.">
     <meta property="og:image" content="https://trywhitespace.com/src/assets/og-feature.png">
     <meta property="og:image:width" content="1914">
@@ -24,7 +24,7 @@
     <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://trywhitespace.com/">
-    <meta name="twitter:title" content="Whitespace | 10x Your Inner Self">
+    <meta name="twitter:title" content="Whitespace | Meditation made for you. Every time.">
     <meta name="twitter:description" content="Your edge, on-demand. Personalized meditation that aligns mind, body, and intention - clearing the noise so you can build what matters. For founders and high-performers.">
     <meta name="twitter:image" content="https://trywhitespace.com/src/assets/twitter-feature.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
