--- a/index.html
+++ b/index.html
@@ -2498,6 +2498,11 @@
                     <span>#1 Product of the Day</span>
                 </a>
                 <span class="hero-badge-divider">·</span>
+                <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
+                    <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
+                    <span>#3 Product of the Week</span>
+                </a>
+                <span class="hero-badge-divider">·</span>
                 <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
                     <span style="color: #f5a623; font-style: normal; font-size: 12px; letter-spacing: 1px;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
                     <span>on the App Store</span>
@@ -3045,6 +3050,11 @@
                     <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
                         <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
                         <span>#1 Product of the Day</span>
+                    </a>
+                    <span class="hero-badge-divider">·</span>
+                    <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
+                        <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
+                        <span>#3 Product of the Week</span>
                     </a>
                     <span class="hero-badge-divider">·</span>
                     <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
